--- a/src/AzureFunctions.Extensions.Swashbuckle/AzureFunctions.Extensions.Swashbuckle/AzureFunctions.Extensions.Swashbuckle.csproj
+++ b/src/AzureFunctions.Extensions.Swashbuckle/AzureFunctions.Extensions.Swashbuckle/AzureFunctions.Extensions.Swashbuckle.csproj
@@ -1,21 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <PackageId>AzureExtensions.Swashbuckle</PackageId>
-    <Authors>vitalybibikov</Authors>
-    <Description>Swagger and Swagger UI in Azure Functions by Swashbuckle</Description>
+    <PackageId>AzureExtensions.Swashbuckle.V3</PackageId>
+    <Authors>jmemisevic dvanlochem</Authors>
+    <Description>Swagger and Swagger UI in Azure Functions by Swashbuckle. This package is a fork of Vitaly Bibikov AzureExtensions.Swashbuckle, making it Azure Functions V3 compatible
+</Description>
     <AssemblyName>AzureFunctions.Extensions.Swashbuckle</AssemblyName>
-    <Version>3.3.1-beta</Version>
+    <Version>1.0.0-beta</Version>
     <RootNamespace>AzureFunctions.Extensions.Swashbuckle</RootNamespace>
-    <Copyright>vitalybibikov</Copyright>
-    <PackageProjectUrl>https://github.com/vitalybibikov/azure-functions-extensions-swashbuckle</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/vitalybibikov/azure-functions-extensions-swashbuckle</RepositoryUrl>
+    <Copyright>dvanlochem</Copyright>
+    <PackageProjectUrl>https://github.com/dvanlochem/AzureExtensions.Swashbuckle</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/dvanlochem/AzureExtensions.Swashbuckle</RepositoryUrl>
     <RepositoryType>GitHub</RepositoryType>
-    <PackageTags>Swagger Swashbuckle AzureFunctions webjobs extensions</PackageTags>
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageTags>Swagger Swashbuckle AzureFunctions V3 webjobs extensions</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
+    <PackOnBuild>true</PackOnBuild>
+    <PackageVersion>1.0.0</PackageVersion>
+    <PackageIcon>icon.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -46,6 +49,7 @@
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+    <None Include="images\icon.png" Pack="true" PackagePath="\" />
   </ItemGroup>
 
   <PropertyGroup>
