--- a/src/AzureFunctions.Extensions.Swashbuckle/TestFunction/TestFunction.csproj
+++ b/src/AzureFunctions.Extensions.Swashbuckle/TestFunction/TestFunction.csproj
@@ -1,26 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>net5.0</TargetFramework>
-		<AzureFunctionsVersion>v3</AzureFunctionsVersion>
+		<TargetFramework>net9.0</TargetFramework>
+		<AzureFunctionsVersion>v4</AzureFunctionsVersion>
 		<OutputType>Exe</OutputType>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
 		<DocumentationFile>TestFunction.xml</DocumentationFile>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Abstractions" Version="1.1.0" />
-		<PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.0.13" />
-		<PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Timer" Version="4.0.1" />
-		<PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.3.0" OutputItemType="Analyzer" />
-		<PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.6.0" />
-		<PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.2.9" />
-		<PackageReference Include="Synigo.OneAPI.Core" Version="1.9.1.59" />
-		<PackageReference Include="Synigo.OneAPI.Core.Functions" Version="1.9.1.59" />
-		<PackageReference Include="Synigo.OneAPI.Interfaces" Version="1.9.1.59" />
-		<PackageReference Include="Synigo.OneAPI.Model" Version="1.9.1.59" />
-		<PackageReference Include="Synigo.OneApi.Storage" Version="1.9.1.59" />
-		<PackageReference Include="Synigo.OpenEducationAPI" Version="1.9.1.59" />
+		<PackageReference Include="Azure.Identity" Version="1.15.0" />
+		<PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Abstractions" Version="1.3.0" />
+		<PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.3.0" />
+		<PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Timer" Version="4.3.1" />
+		<PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="2.0.5" OutputItemType="Analyzer" />
+		<PackageReference Include="Microsoft.Azure.Functions.Worker" Version="2.0.0" />
+		<PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.3.0" />
+		<PackageReference Include="Synigo.OneAPI.Core" Version="1.9.2.10" />
+		<PackageReference Include="Synigo.OneAPI.Core.Functions" Version="1.9.2.10" />
+		<PackageReference Include="Synigo.OneAPI.Interfaces" Version="1.9.2.10" />
+		<PackageReference Include="Synigo.OneAPI.Model" Version="1.9.2.10" />
+		<PackageReference Include="Synigo.OneApi.Storage" Version="1.9.2.4" />
+		<PackageReference Include="Synigo.OpenEducationAPI" Version="1.9.2.10" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\AzureFunctions.Extensions.Swashbuckle\AzureFunctions.Extensions.Swashbuckle.csproj">
